# Echo

./: .env  .pre-commit-config.yaml  .taplo.toml  Cargo.toml  README.md  build.rs
abi/: Cargo.toml  build.rs
abi/protos/: echo.proto
abi/src/: error.rs  lib.rs  traits.rs
abi/src/pb/: echo.rs
client/: Cargo.toml
client/src/: audio.rs  client.rs  config.rs  lib.rs  utils.rs
config/: chat.yaml  manager.yaml  manager_test.yaml
migrations/: 20250120073702_init.down.sql  20250120073702_init.up.sql
proto/: echo.proto
rfcs/: 0001-core-service.md  0002-audio-client.md
rfcs/images/: architecture.excalidraw  channel_service_arch.excalidraw  client_audio.excalidraw
scripts/: grpc.sh  start_server.sh
server/: Cargo.toml
server/src/: config.rs  db.rs  hash.rs  lib.rs
server/src/auth/: interceptor.rs  limiter.rs  mod.rs
server/src/servers/: chat_server.rs  client.rs
server/src/servers/manager/: channel.rs  mod.rs  server.rs  user.rs
server/tests/: channel.rs  chat.rs  user.rs
server/tests/common/: server.rs
src/: auth.rs  client.rs  config.rs  connection.rs  core.rs  db.rs  error.rs  frame.rs  hash.rs  lib.rs  server.rs  service.rs  shutdown.rs  user.rs
src/auth/: interceptor.rs  limiter.rs  mod.rs  validator.rs
src/pb/: echo.rs
src/servers/: chat_server.rs  client.rs  manager_server.rs  mod.rs
src/servers/manager/: channel.rs  mod.rs  server.rs  user.rs
src/service/: manager.rs  mod.rs  server.rs
tests/: channel.rs  chat.rs  user.rs
tests/common/: server.rs
