[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tonic-build = "0.12.3"
tonic = "0.12.3"
rand = "0.8"
async-stream = "0.3.6"
time = "0.3.37"
log = "0.4.22"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio-stream = "0.1.17"
password-hash = "0.5.0"
argon2 = "0.5.3"
bcrypt = "0.16.0"
thiserror = "2.0.11"
serde_yaml = "0.9.34"
env_logger = "0.11.6"

[build-dependencies]
tonic-build = "*"
